# build

./: .travis.yml  CMakeLists.txt  build.py  makepawm.sh
cmakemodules/: FindLibedit.cmake  FindNcl.cmake  FindR.cmake
